<resources>
    <string name="app_name">MAD</string>
    <string name="emailid">Email</string>
    <string name="password_id"></string>
    <string name="pass_id">Password</string>
    <string name="signin_id">Sign In</string>
    <string name="hitxt_id">Hi there! Nice to see you again</string>
    <string name="signin_btn">Sign In</string>
    <string name="forgt_txt">Forgot Password?</string>
    <string name="signuptxt">Sign Up</string>
    <string name="name_id">Full Name</string>
    <string name="addressid">Address</string>
    <string name="phone_id">Contact No</string>
    <string name="email_id">Email</string>
    <string name="passwrd_id"></string>
    <string name="passwrd_txt">Password</string>
    <string name="confpw_txt">Confirm Password</string>
    <string name="confpw_id" />
    <string name="agreechckbx_id">I agree to the Terms of Services and Privacy Policy.</string>
    <string name="signup_btn1">Sign Up</string>
    <string name="continue_btn">Continue</string>
    <string name="textView7">Have an Account?</string>
    <string name="signin">Sign In</string>
    <string name="buffet_txt">Book My Buffet</string>
    <string name="textView2">Small Function Package</string>
    <string name="textView3">Package 1</string>
    <string name="textView4">The perfect package for your everyday party. A good plck for 50 to
        100 people</string>
    <string name="pckg_btn1">Select Package</string>
    <string name="textView5">Package 2</string>
    <string name="textView6">A good pack for 100 to 150</string>
    <string name="pckg_btn2">SELECT PACKAGE</string>
    <string name="textView10">Alms Giving Package</string>
    <string name="textView11">Package 1</string>
    <string name="textView12">A good pack for 200 above people</string>
    <string name="pcg_btn3">SELECT PACKAGE</string>
    <string name="textView13">Night Pary Package</string>
    <string name="textView14">Package 1</string>
    <string name="textView15">The perfect for your evert night party.A good pack for 50 to 100
        people</string>
    <string name="pcg_btn4">SELECT PACKAGE</string>
    <string name="textView1">Default Items</string>
    <string name="textView8">Welcome Drink</string>
    <string name="textView9">Cutlet</string>
    <string name="textView16">Papadam</string>
    <string name="textView17">Buffet Set</string>
    <string name="textView18">Plates and Glasses</string>
    <string name="textView19">Water filter</string>
    <string name="textView20">Choose Items</string>
    <string name="textView21">Rice (Select 2)</string>
    <string name="checkBox1">Plain Rice Keeri Samba</string>
    <string name="checkBox2">Red Rice Samba</string>
    <string name="checkBox3">Yello Rice Keeri Samba</string>
    <string name="checkBox4">Vegetable Rice Basmathi</string>
    <string name="textView22">Curry (Select 4)</string>
    <string name="checkBox5">Dhal Curry</string>
    <string name="checkBox6">Vegetable Salad</string>
    <string name="checkBox7">Brinjol Morju</string>
    <string name="checkBox8">Cashew Curry</string>
    <string name="checkBox9">Pickle</string>
    <string name="checkBox10">Onion Badum</string>
    <string name="textView23">Meat/Poultry (Select 2)</string>
    <string name="checkBox11">Chicken Curry</string>
    <string name="checkBox12">Fish Deval</string>
    <string name="checkBox13">Prawns Curry</string>
    <string name="checkBox14">Fish Fingers</string>
    <string name="textView24">Dessert (Select 1)</string>
    <string name="checkBox15">Watalappam</string>
    <string name="checkBox16">Caramel Pudding</string>
    <string name="checkBox17">Fruits</string>
    <string name="cinfirm_btn">Confirm Your Order</string>
    <string name="textView25">Choose One Menu</string>
    <string name="menu1">Menu # 1</string>
    <string name="textView26">Vegetable Fride Rice</string>
    <string name="textView27">Chicken Deval</string>
    <string name="textView28"><![CDATA[Sweet & Sour Fish]]></string>
    <string name="textView29">Chilli Gahlic Kankun</string>
    <string name="textView30">Vegetable Chopsuey</string>
    <string name="textView31">Chilli Paste</string>
    <string name="textView32">Dessert</string>
    <string name="textView33">Cream Caramel Or Ice Cream</string>
    <string name="menu2">Menu # 2</string>
    <string name="textView34">Mixed Fride Rice</string>
    <string name="textView35">Cicken with Cashew Nut</string>
    <string name="textView36">Vegetable Salad</string>
    <string name="textView37">Kankun With Black Mashroom</string>
    <string name="textView38">Mushroom</string>
    <string name="textView39">Chilli Paste</string>
    <string name="textView40">Dessert</string>
    <string name="textView41">Whatalappan with Ice Cream</string>
    <string name="menu3">Menu # 3</string>
    <string name="textView42"><![CDATA[Yellow Rice With Plums & Cashew]]></string>
    <string name="textView43">Chicken Curry</string>
    <string name="textView44">Fish Deval</string>
    <string name="textView45">Dhal Curry</string>
    <string name="textView46">Vegetable Chopsuey</string>
    <string name="textView47">Chilli Paste</string>
    <string name="textView48">Dessert</string>
    <string name="textView49">Whatalappam With Ice Cream</string>
    <string name="cnfrm_btn2">Confirm Your Order</string>
    <string name="textView_a">Default Items</string>
    <string name="textView50">Ice Cream</string>
    <string name="textView51">Cutlet</string>
    <string name="textView52">Papadam</string>
    <string name="textView53">Buffet Set</string>
    <string name="textView54"><![CDATA[Paltes & Glasses]]></string>
    <string name="textView55">Choose Items</string>
    <string name="textView56">Rice (Select 2)</string>
    <string name="checkBox_1">Plain Rice</string>
    <string name="checkBox18">Red Rice Samba</string>
    <string name="checkBox20">Yellow Rice Keeri Samba</string>
    <string name="checkBox21">Vegetable Rice Basmathi</string>
    <string name="textView57">Curry (Select 4)</string>
    <string name="checkBox22">Dhal Curry</string>
    <string name="checkBox23">Bean Curry</string>
    <string name="checkBox24">Ambarella Curry</string>
    <string name="checkBox25">Potato Curry</string>
    <string name="checkBox26">Mushroom Curry</string>
    <string name="checkBox27">Cashew Curry</string>
    <string name="checkBox28">Vegetable Salad</string>
    <string name="textView58">Meat (Select 1)</string>
    <string name="checkBox29">Fish Curry</string>
    <string name="checkBox30">Chicken Curry</string>
    <string name="checkBox31">Dry Fish Curry</string>
    <string name="textView59">Badum/Morju (Select 2)</string>
    <string name="checkBox32">Brinjol Morju</string>
    <string name="checkBox33">Onion Badum</string>
    <string name="checkBox34">Potato Badum</string>
    <string name="checkBox35">Chilli Paste</string>
    <string name="textView60">Dessert (Select 1)</string>
    <string name="checkBox36">Watalappam</string>
    <string name="checkBox37">Fruits</string>
    <string name="checkBox38">Ice Cream</string>
    <string name="checkBox39">Curd</string>
    <string name="conf_btn3">Confirm Your Order</string>
    <string name="textView">Default Items</string>
    <string name="textView61">Welcome Drink</string>
    <string name="textView62">Ice Cream</string>
    <string name="textView63">Chilli Paste</string>
    <string name="textView64">Buffet Set</string>
    <string name="textView65"><![CDATA[Plates & Glasses]]></string>
    <string name="textView66">Water Filter</string>
    <string name="textView67">Choose Items</string>
    <string name="textView68">Rice (Select 1)</string>
    <string name="checkBox">Vegetable Rice</string>
    <string name="checkBox19"><![CDATA[Yellow Rice With Plums & Cashew]]></string>
    <string name="checkBox40">Mixed Fried Rice</string>
    <string name="textView69">Curry (Select 3)</string>
    <string name="checkBox41">Dhal Curry</string>
    <string name="checkBox42">Vegetable Salad</string>
    <string name="checkBox43">Vegetable Chopsuey</string>
    <string name="checkBox45">Brinjol Morju</string>
    <string name="checkBox46">Onion Badum</string>
    <string name="textView70">Meat (Select 2)</string>
    <string name="checkBox47">Chicken Curry</string>
    <string name="checkBox48">Chicken Deval</string>
    <string name="checkBox49">Fish deval</string>
    <string name="checkBox50">Prawns Curry</string>
    <string name="textView71">Dessert (Select 1)</string>
    <string name="checkBox51">Watalappam</string>
    <string name="checkBox52">Caramel Pudding</string>
    <string name="button">Confirm Your Order</string>
    <string name="textView72">My Order</string>
    <string name="textView75">Package Name -</string>
    <string name="textView76" />
    <string name="textView77">Date -</string>
    <string name="textView78" />
    <string name="textView79">Estimate Guest No -</string>
    <string name="textView81">Menu</string>
    <string name="textView82" />
    <string name="edit_btn">Edit Order</string>
    <string name="delete_btn">Cancel Order</string>
    <string name="button2">Pay</string>
    <string name="textView73">Total Amount</string>
</resources>